--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ http://www.tooplate.com/view/2092-shelf
                         <h2 class="tm-main-title">Welcome to our bookstore</h2>    
                     </header>
                     
-                    <p>Shelf HTML template is provided by Tooplate. Please tell your friends about it. Thank you. Images are from Unsplash website. In tincidunt metus sed justo tincidunt sollicitudin. Curabitur magna tellus, condimentum vitae consectetur id, elementum sit amet erat.</p>
+                    <p> This is Shelf HTML template . Please tell your friends about it. Thank you. Images are from Unsplash website. In tincidunt metus sed justo tincidunt sollicitudin. Curabitur magna tellus, condimentum vitae consectetur id, elementum sit amet erat.</p>
                     
                     <div class="tm-gallery">
                         <div class="row">
